Refactor Owen to delegate responsibilities to other components
The Owen class handles initialization, user interaction, command
parsing, and task management, leading to a bloated and less modular
design.

Centralizing too many responsibilities in the Owen class makes the
code harder to read, maintain, and extend.

Let's refactor the Owen class to have parser, tasklist and storage
components.

This approach simplifies the Owen class and adheres to the single
responsibility principle. Additionally, each component focuses on a
single task.